APIs/googleapis.com/androidpublisher/v2/java-client/README.md
# openapi-java-client

Google Play Developer
- API version: v2
  - Build date: 2024-10-12T11:48:26.985705-04:00[America/New_York]
  - Generator version: 7.9.0

Accesses Android application developers' Google Play accounts.

  For more information, please visit [https://google.com](https://google.com)

*Automatically generated by the [OpenAPI Generator](https://openapi-generator.tech)*


## Requirements

Building the API client library requires:
1. Java 1.8+
2. Maven (3.8.3+)/Gradle (7.2+)

## Installation

To install the API client library to your local Maven repository, simply execute:

```shell
mvn clean install
```

To deploy it to a remote Maven repository instead, configure the settings of the repository and execute:

```shell
mvn clean deploy
```

Refer to the [OSSRH Guide](http://central.sonatype.org/pages/ossrh-guide.html) for more information.

### Maven users

Add this dependency to your project's POM:

```xml
<dependency>
  <groupId>org.openapitools</groupId>
  <artifactId>openapi-java-client</artifactId>
  <version>v2</version>
  <scope>compile</scope>
</dependency>
```

### Gradle users

Add this dependency to your project's build file:

```groovy
  repositories {
    mavenCentral()     // Needed if the 'openapi-java-client' jar has been published to maven central.
    mavenLocal()       // Needed if the 'openapi-java-client' jar has been published to the local maven repo.
  }

  dependencies {
     implementation "org.openapitools:openapi-java-client:v2"
  }
```

### Others

At first generate the JAR by executing:

```shell
mvn clean package
```

Then manually install the following JARs:

* `target/openapi-java-client-v2.jar`
* `target/lib/*.jar`

## Getting Started

Please follow the [installation](#installation) instruction and execute the following Java code:

```java

// Import classes:
import org.openapitools.client.ApiClient;
import org.openapitools.client.ApiException;
import org.openapitools.client.Configuration;
import org.openapitools.client.auth.*;
import org.openapitools.client.model.*;
import org.openapitools.client.api.EditsApi;

public class Example {
  public static void main(String[] args) {
    ApiClient defaultClient = Configuration.getDefaultApiClient();
    defaultClient.setBasePath("https://www.googleapis.com/androidpublisher/v2/applications");
    
    // Configure OAuth2 access token for authorization: Oauth2c
    OAuth Oauth2c = (OAuth) defaultClient.getAuthentication("Oauth2c");
    Oauth2c.setAccessToken("YOUR ACCESS TOKEN");

    // Configure OAuth2 access token for authorization: Oauth2
    OAuth Oauth2 = (OAuth) defaultClient.getAuthentication("Oauth2");
    Oauth2.setAccessToken("YOUR ACCESS TOKEN");

    EditsApi apiInstance = new EditsApi(defaultClient);
    String packageName = "packageName_example"; // String | Unique identifier for the Android app that is being updated; for example, \"com.spiffygame\".
    String editId = "editId_example"; // String | Unique identifier for this edit.
    Integer apkVersionCode = 56; // Integer | The APK version code whose APK-specific listings should be read or modified.
    String language = "language_example"; // String | The language code (a BCP-47 language tag) of the APK-specific localized listing to read or modify. For example, to select Austrian German, pass \"de-AT\".
    String alt = "json"; // String | Data format for the response.
    String fields = "fields_example"; // String | Selector specifying which fields to include in a partial response.
    String key = "key_example"; // String | API key. Your API key identifies your project and provides you with API access, quota, and reports. Required unless you provide an OAuth 2.0 token.
    String oauthToken = "oauthToken_example"; // String | OAuth 2.0 token for the current user.
    Boolean prettyPrint = true; // Boolean | Returns response with indentations and line breaks.
    String quotaUser = "quotaUser_example"; // String | An opaque string that represents a user for quota purposes. Must not exceed 40 characters.
    String userIp = "userIp_example"; // String | Deprecated. Please use quotaUser instead.
    try {
      apiInstance.androidpublisherEditsApklistingsDelete(packageName, editId, apkVersionCode, language, alt, fields, key, oauthToken, prettyPrint, quotaUser, userIp);
    } catch (ApiException e) {
      System.err.println("Exception when calling EditsApi#androidpublisherEditsApklistingsDelete");
      System.err.println("Status code: " + e.getCode());
      System.err.println("Reason: " + e.getResponseBody());
      System.err.println("Response headers: " + e.getResponseHeaders());
      e.printStackTrace();
    }
  }
}

```

## Documentation for API Endpoints

All URIs are relative to *https://www.googleapis.com/androidpublisher/v2/applications*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*EditsApi* | [**androidpublisherEditsApklistingsDelete**](docs/EditsApi.md#androidpublisherEditsApklistingsDelete) | **DELETE** /{packageName}/edits/{editId}/apks/{apkVersionCode}/listings/{language} | 
*EditsApi* | [**androidpublisherEditsApklistingsDeleteall**](docs/EditsApi.md#androidpublisherEditsApklistingsDeleteall) | **DELETE** /{packageName}/edits/{editId}/apks/{apkVersionCode}/listings | 
*EditsApi* | [**androidpublisherEditsApklistingsGet**](docs/EditsApi.md#androidpublisherEditsApklistingsGet) | **GET** /{packageName}/edits/{editId}/apks/{apkVersionCode}/listings/{language} | 
*EditsApi* | [**androidpublisherEditsApklistingsList**](docs/EditsApi.md#androidpublisherEditsApklistingsList) | **GET** /{packageName}/edits/{editId}/apks/{apkVersionCode}/listings | 
*EditsApi* | [**androidpublisherEditsApklistingsPatch**](docs/EditsApi.md#androidpublisherEditsApklistingsPatch) | **PATCH** /{packageName}/edits/{editId}/apks/{apkVersionCode}/listings/{language} | 
*EditsApi* | [**androidpublisherEditsApklistingsUpdate**](docs/EditsApi.md#androidpublisherEditsApklistingsUpdate) | **PUT** /{packageName}/edits/{editId}/apks/{apkVersionCode}/listings/{language} | 
*EditsApi* | [**androidpublisherEditsApksAddexternallyhosted**](docs/EditsApi.md#androidpublisherEditsApksAddexternallyhosted) | **POST** /{packageName}/edits/{editId}/apks/externallyHosted | 
*EditsApi* | [**androidpublisherEditsApksList**](docs/EditsApi.md#androidpublisherEditsApksList) | **GET** /{packageName}/edits/{editId}/apks | 
*EditsApi* | [**androidpublisherEditsApksUpload**](docs/EditsApi.md#androidpublisherEditsApksUpload) | **POST** /{packageName}/edits/{editId}/apks | 
*EditsApi* | [**androidpublisherEditsBundlesList**](docs/EditsApi.md#androidpublisherEditsBundlesList) | **GET** /{packageName}/edits/{editId}/bundles | 
*EditsApi* | [**androidpublisherEditsBundlesUpload**](docs/EditsApi.md#androidpublisherEditsBundlesUpload) | **POST** /{packageName}/edits/{editId}/bundles | 
*EditsApi* | [**androidpublisherEditsCommit**](docs/EditsApi.md#androidpublisherEditsCommit) | **POST** /{packageName}/edits/{editId}:commit | 
*EditsApi* | [**androidpublisherEditsDelete**](docs/EditsApi.md#androidpublisherEditsDelete) | **DELETE** /{packageName}/edits/{editId} | 
*EditsApi* | [**androidpublisherEditsDeobfuscationfilesUpload**](docs/EditsApi.md#androidpublisherEditsDeobfuscationfilesUpload) | **POST** /{packageName}/edits/{editId}/apks/{apkVersionCode}/deobfuscationFiles/{deobfuscationFileType} | 
*EditsApi* | [**androidpublisherEditsDetailsGet**](docs/EditsApi.md#androidpublisherEditsDetailsGet) | **GET** /{packageName}/edits/{editId}/details | 
*EditsApi* | [**androidpublisherEditsDetailsPatch**](docs/EditsApi.md#androidpublisherEditsDetailsPatch) | **PATCH** /{packageName}/edits/{editId}/details | 
*EditsApi* | [**androidpublisherEditsDetailsUpdate**](docs/EditsApi.md#androidpublisherEditsDetailsUpdate) | **PUT** /{packageName}/edits/{editId}/details | 
*EditsApi* | [**androidpublisherEditsExpansionfilesGet**](docs/EditsApi.md#androidpublisherEditsExpansionfilesGet) | **GET** /{packageName}/edits/{editId}/apks/{apkVersionCode}/expansionFiles/{expansionFileType} | 
*EditsApi* | [**androidpublisherEditsExpansionfilesPatch**](docs/EditsApi.md#androidpublisherEditsExpansionfilesPatch) | **PATCH** /{packageName}/edits/{editId}/apks/{apkVersionCode}/expansionFiles/{expansionFileType} | 
*EditsApi* | [**androidpublisherEditsExpansionfilesUpdate**](docs/EditsApi.md#androidpublisherEditsExpansionfilesUpdate) | **PUT** /{packageName}/edits/{editId}/apks/{apkVersionCode}/expansionFiles/{expansionFileType} | 
*EditsApi* | [**androidpublisherEditsExpansionfilesUpload**](docs/EditsApi.md#androidpublisherEditsExpansionfilesUpload) | **POST** /{packageName}/edits/{editId}/apks/{apkVersionCode}/expansionFiles/{expansionFileType} | 
*EditsApi* | [**androidpublisherEditsGet**](docs/EditsApi.md#androidpublisherEditsGet) | **GET** /{packageName}/edits/{editId} | 
*EditsApi* | [**androidpublisherEditsImagesDelete**](docs/EditsApi.md#androidpublisherEditsImagesDelete) | **DELETE** /{packageName}/edits/{editId}/listings/{language}/{imageType}/{imageId} | 
*EditsApi* | [**androidpublisherEditsImagesDeleteall**](docs/EditsApi.md#androidpublisherEditsImagesDeleteall) | **DELETE** /{packageName}/edits/{editId}/listings/{language}/{imageType} | 
*EditsApi* | [**androidpublisherEditsImagesList**](docs/EditsApi.md#androidpublisherEditsImagesList) | **GET** /{packageName}/edits/{editId}/listings/{language}/{imageType} | 
*EditsApi* | [**androidpublisherEditsImagesUpload**](docs/EditsApi.md#androidpublisherEditsImagesUpload) | **POST** /{packageName}/edits/{editId}/listings/{language}/{imageType} | 
*EditsApi* | [**androidpublisherEditsInsert**](docs/EditsApi.md#androidpublisherEditsInsert) | **POST** /{packageName}/edits | 
*EditsApi* | [**androidpublisherEditsListingsDelete**](docs/EditsApi.md#androidpublisherEditsListingsDelete) | **DELETE** /{packageName}/edits/{editId}/listings/{language} | 
*EditsApi* | [**androidpublisherEditsListingsDeleteall**](docs/EditsApi.md#androidpublisherEditsListingsDeleteall) | **DELETE** /{packageName}/edits/{editId}/listings | 
*EditsApi* | [**androidpublisherEditsListingsGet**](docs/EditsApi.md#androidpublisherEditsListingsGet) | **GET** /{packageName}/edits/{editId}/listings/{language} | 
*EditsApi* | [**androidpublisherEditsListingsList**](docs/EditsApi.md#androidpublisherEditsListingsList) | **GET** /{packageName}/edits/{editId}/listings | 
*EditsApi* | [**androidpublisherEditsListingsPatch**](docs/EditsApi.md#androidpublisherEditsListingsPatch) | **PATCH** /{packageName}/edits/{editId}/listings/{language} | 
*EditsApi* | [**androidpublisherEditsListingsUpdate**](docs/EditsApi.md#androidpublisherEditsListingsUpdate) | **PUT** /{packageName}/edits/{editId}/listings/{language} | 
*EditsApi* | [**androidpublisherEditsTestersGet**](docs/EditsApi.md#androidpublisherEditsTestersGet) | **GET** /{packageName}/edits/{editId}/testers/{track} | 
*EditsApi* | [**androidpublisherEditsTestersPatch**](docs/EditsApi.md#androidpublisherEditsTestersPatch) | **PATCH** /{packageName}/edits/{editId}/testers/{track} | 
*EditsApi* | [**androidpublisherEditsTestersUpdate**](docs/EditsApi.md#androidpublisherEditsTestersUpdate) | **PUT** /{packageName}/edits/{editId}/testers/{track} | 
*EditsApi* | [**androidpublisherEditsTracksGet**](docs/EditsApi.md#androidpublisherEditsTracksGet) | **GET** /{packageName}/edits/{editId}/tracks/{track} | 
*EditsApi* | [**androidpublisherEditsTracksList**](docs/EditsApi.md#androidpublisherEditsTracksList) | **GET** /{packageName}/edits/{editId}/tracks | 
*EditsApi* | [**androidpublisherEditsTracksPatch**](docs/EditsApi.md#androidpublisherEditsTracksPatch) | **PATCH** /{packageName}/edits/{editId}/tracks/{track} | 
*EditsApi* | [**androidpublisherEditsTracksUpdate**](docs/EditsApi.md#androidpublisherEditsTracksUpdate) | **PUT** /{packageName}/edits/{editId}/tracks/{track} | 
*EditsApi* | [**androidpublisherEditsValidate**](docs/EditsApi.md#androidpublisherEditsValidate) | **POST** /{packageName}/edits/{editId}:validate | 
*InappproductsApi* | [**androidpublisherInappproductsDelete**](docs/InappproductsApi.md#androidpublisherInappproductsDelete) | **DELETE** /{packageName}/inappproducts/{sku} | 
*InappproductsApi* | [**androidpublisherInappproductsGet**](docs/InappproductsApi.md#androidpublisherInappproductsGet) | **GET** /{packageName}/inappproducts/{sku} | 
*InappproductsApi* | [**androidpublisherInappproductsInsert**](docs/InappproductsApi.md#androidpublisherInappproductsInsert) | **POST** /{packageName}/inappproducts | 
*InappproductsApi* | [**androidpublisherInappproductsList**](docs/InappproductsApi.md#androidpublisherInappproductsList) | **GET** /{packageName}/inappproducts | 
*InappproductsApi* | [**androidpublisherInappproductsPatch**](docs/InappproductsApi.md#androidpublisherInappproductsPatch) | **PATCH** /{packageName}/inappproducts/{sku} | 
*InappproductsApi* | [**androidpublisherInappproductsUpdate**](docs/InappproductsApi.md#androidpublisherInappproductsUpdate) | **PUT** /{packageName}/inappproducts/{sku} | 
*OrdersApi* | [**androidpublisherOrdersRefund**](docs/OrdersApi.md#androidpublisherOrdersRefund) | **POST** /{packageName}/orders/{orderId}:refund | 
*PurchasesApi* | [**androidpublisherPurchasesProductsGet**](docs/PurchasesApi.md#androidpublisherPurchasesProductsGet) | **GET** /{packageName}/purchases/products/{productId}/tokens/{token} | 
*PurchasesApi* | [**androidpublisherPurchasesSubscriptionsCancel**](docs/PurchasesApi.md#androidpublisherPurchasesSubscriptionsCancel) | **POST** /{packageName}/purchases/subscriptions/{subscriptionId}/tokens/{token}:cancel | 
*PurchasesApi* | [**androidpublisherPurchasesSubscriptionsDefer**](docs/PurchasesApi.md#androidpublisherPurchasesSubscriptionsDefer) | **POST** /{packageName}/purchases/subscriptions/{subscriptionId}/tokens/{token}:defer | 
*PurchasesApi* | [**androidpublisherPurchasesSubscriptionsGet**](docs/PurchasesApi.md#androidpublisherPurchasesSubscriptionsGet) | **GET** /{packageName}/purchases/subscriptions/{subscriptionId}/tokens/{token} | 
*PurchasesApi* | [**androidpublisherPurchasesSubscriptionsRefund**](docs/PurchasesApi.md#androidpublisherPurchasesSubscriptionsRefund) | **POST** /{packageName}/purchases/subscriptions/{subscriptionId}/tokens/{token}:refund | 
*PurchasesApi* | [**androidpublisherPurchasesSubscriptionsRevoke**](docs/PurchasesApi.md#androidpublisherPurchasesSubscriptionsRevoke) | **POST** /{packageName}/purchases/subscriptions/{subscriptionId}/tokens/{token}:revoke | 
*PurchasesApi* | [**androidpublisherPurchasesVoidedpurchasesList**](docs/PurchasesApi.md#androidpublisherPurchasesVoidedpurchasesList) | **GET** /{packageName}/purchases/voidedpurchases | 
*ReviewsApi* | [**androidpublisherReviewsGet**](docs/ReviewsApi.md#androidpublisherReviewsGet) | **GET** /{packageName}/reviews/{reviewId} | 
*ReviewsApi* | [**androidpublisherReviewsList**](docs/ReviewsApi.md#androidpublisherReviewsList) | **GET** /{packageName}/reviews | 
*ReviewsApi* | [**androidpublisherReviewsReply**](docs/ReviewsApi.md#androidpublisherReviewsReply) | **POST** /{packageName}/reviews/{reviewId}:reply | 


## Documentation for Models

 - [Apk](docs/Apk.md)
 - [ApkBinary](docs/ApkBinary.md)
 - [ApkListing](docs/ApkListing.md)
 - [ApkListingsListResponse](docs/ApkListingsListResponse.md)
 - [ApksAddExternallyHostedRequest](docs/ApksAddExternallyHostedRequest.md)
 - [ApksAddExternallyHostedResponse](docs/ApksAddExternallyHostedResponse.md)
 - [ApksListResponse](docs/ApksListResponse.md)
 - [AppDetails](docs/AppDetails.md)
 - [AppEdit](docs/AppEdit.md)
 - [Bundle](docs/Bundle.md)
 - [BundlesListResponse](docs/BundlesListResponse.md)
 - [Comment](docs/Comment.md)
 - [DeobfuscationFile](docs/DeobfuscationFile.md)
 - [DeobfuscationFilesUploadResponse](docs/DeobfuscationFilesUploadResponse.md)
 - [DeveloperComment](docs/DeveloperComment.md)
 - [DeviceMetadata](docs/DeviceMetadata.md)
 - [ExpansionFile](docs/ExpansionFile.md)
 - [ExpansionFilesUploadResponse](docs/ExpansionFilesUploadResponse.md)
 - [ExternallyHostedApk](docs/ExternallyHostedApk.md)
 - [ExternallyHostedApkUsesPermission](docs/ExternallyHostedApkUsesPermission.md)
 - [Image](docs/Image.md)
 - [ImagesDeleteAllResponse](docs/ImagesDeleteAllResponse.md)
 - [ImagesListResponse](docs/ImagesListResponse.md)
 - [ImagesUploadResponse](docs/ImagesUploadResponse.md)
 - [InAppProduct](docs/InAppProduct.md)
 - [InAppProductListing](docs/InAppProductListing.md)
 - [InappproductsListResponse](docs/InappproductsListResponse.md)
 - [Listing](docs/Listing.md)
 - [ListingsListResponse](docs/ListingsListResponse.md)
 - [PageInfo](docs/PageInfo.md)
 - [Price](docs/Price.md)
 - [ProductPurchase](docs/ProductPurchase.md)
 - [Review](docs/Review.md)
 - [ReviewReplyResult](docs/ReviewReplyResult.md)
 - [ReviewsListResponse](docs/ReviewsListResponse.md)
 - [ReviewsReplyRequest](docs/ReviewsReplyRequest.md)
 - [ReviewsReplyResponse](docs/ReviewsReplyResponse.md)
 - [SubscriptionCancelSurveyResult](docs/SubscriptionCancelSurveyResult.md)
 - [SubscriptionDeferralInfo](docs/SubscriptionDeferralInfo.md)
 - [SubscriptionPriceChange](docs/SubscriptionPriceChange.md)
 - [SubscriptionPurchase](docs/SubscriptionPurchase.md)
 - [SubscriptionPurchasesDeferRequest](docs/SubscriptionPurchasesDeferRequest.md)
 - [SubscriptionPurchasesDeferResponse](docs/SubscriptionPurchasesDeferResponse.md)
 - [Testers](docs/Testers.md)
 - [Timestamp](docs/Timestamp.md)
 - [TokenPagination](docs/TokenPagination.md)
 - [Track](docs/Track.md)
 - [TracksListResponse](docs/TracksListResponse.md)
 - [UserComment](docs/UserComment.md)
 - [VoidedPurchase](docs/VoidedPurchase.md)
 - [VoidedPurchasesListResponse](docs/VoidedPurchasesListResponse.md)


<a id="documentation-for-authorization"></a>
## Documentation for Authorization


Authentication schemes defined for the API:
<a id="Oauth2"></a>
### Oauth2

- **Type**: OAuth
- **Flow**: implicit
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
  - https://www.googleapis.com/auth/androidpublisher: View and manage your Google Play Developer account

<a id="Oauth2c"></a>
### Oauth2c

- **Type**: OAuth
- **Flow**: accessCode
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
  - https://www.googleapis.com/auth/androidpublisher: View and manage your Google Play Developer account


## Recommendation

It's recommended to create an instance of `ApiClient` per thread in a multithreaded environment to avoid any potential issues.

## Author



