APIs/googleapis.com/androidpublisher/v3/java-client/README.md
# openapi-java-client

Google Play Android Developer API
- API version: v3
  - Build date: 2024-10-12T11:48:32.125268-04:00[America/New_York]
  - Generator version: 7.9.0

Lets Android application developers access their Google Play accounts. At a high level, the expected workflow is to \"insert\" an Edit, make changes as necessary, and then \"commit\" it. 

  For more information, please visit [https://google.com](https://google.com)

*Automatically generated by the [OpenAPI Generator](https://openapi-generator.tech)*


## Requirements

Building the API client library requires:
1. Java 1.8+
2. Maven (3.8.3+)/Gradle (7.2+)

## Installation

To install the API client library to your local Maven repository, simply execute:

```shell
mvn clean install
```

To deploy it to a remote Maven repository instead, configure the settings of the repository and execute:

```shell
mvn clean deploy
```

Refer to the [OSSRH Guide](http://central.sonatype.org/pages/ossrh-guide.html) for more information.

### Maven users

Add this dependency to your project's POM:

```xml
<dependency>
  <groupId>org.openapitools</groupId>
  <artifactId>openapi-java-client</artifactId>
  <version>v3</version>
  <scope>compile</scope>
</dependency>
```

### Gradle users

Add this dependency to your project's build file:

```groovy
  repositories {
    mavenCentral()     // Needed if the 'openapi-java-client' jar has been published to maven central.
    mavenLocal()       // Needed if the 'openapi-java-client' jar has been published to the local maven repo.
  }

  dependencies {
     implementation "org.openapitools:openapi-java-client:v3"
  }
```

### Others

At first generate the JAR by executing:

```shell
mvn clean package
```

Then manually install the following JARs:

* `target/openapi-java-client-v3.jar`
* `target/lib/*.jar`

## Getting Started

Please follow the [installation](#installation) instruction and execute the following Java code:

```java

// Import classes:
import org.openapitools.client.ApiClient;
import org.openapitools.client.ApiException;
import org.openapitools.client.Configuration;
import org.openapitools.client.auth.*;
import org.openapitools.client.model.*;
import org.openapitools.client.api.ApplicationsApi;

public class Example {
  public static void main(String[] args) {
    ApiClient defaultClient = Configuration.getDefaultApiClient();
    defaultClient.setBasePath("https://androidpublisher.googleapis.com");
    
    // Configure OAuth2 access token for authorization: Oauth2c
    OAuth Oauth2c = (OAuth) defaultClient.getAuthentication("Oauth2c");
    Oauth2c.setAccessToken("YOUR ACCESS TOKEN");

    // Configure OAuth2 access token for authorization: Oauth2
    OAuth Oauth2 = (OAuth) defaultClient.getAuthentication("Oauth2");
    Oauth2.setAccessToken("YOUR ACCESS TOKEN");

    ApplicationsApi apiInstance = new ApplicationsApi(defaultClient);
    String packageName = "packageName_example"; // String | Required. Package name of the app.
    String $xgafv = "1"; // String | V1 error format.
    String accessToken = "accessToken_example"; // String | OAuth access token.
    String alt = "json"; // String | Data format for response.
    String paramCallback = "paramCallback_example"; // String | JSONP
    String fields = "fields_example"; // String | Selector specifying which fields to include in a partial response.
    String key = "key_example"; // String | API key. Your API key identifies your project and provides you with API access, quota, and reports. Required unless you provide an OAuth 2.0 token.
    String oauthToken = "oauthToken_example"; // String | OAuth 2.0 token for the current user.
    Boolean prettyPrint = true; // Boolean | Returns response with indentations and line breaks.
    String quotaUser = "quotaUser_example"; // String | Available to use for quota purposes for server-side applications. Can be any arbitrary string assigned to a user, but should not exceed 40 characters.
    String uploadProtocol = "uploadProtocol_example"; // String | Upload protocol for media (e.g. \"raw\", \"multipart\").
    String uploadType = "uploadType_example"; // String | Legacy upload protocol for media (e.g. \"media\", \"multipart\").
    SafetyLabelsUpdateRequest safetyLabelsUpdateRequest = new SafetyLabelsUpdateRequest(); // SafetyLabelsUpdateRequest | 
    try {
      Object result = apiInstance.androidpublisherApplicationsDataSafety(packageName, $xgafv, accessToken, alt, paramCallback, fields, key, oauthToken, prettyPrint, quotaUser, uploadProtocol, uploadType, safetyLabelsUpdateRequest);
      System.out.println(result);
    } catch (ApiException e) {
      System.err.println("Exception when calling ApplicationsApi#androidpublisherApplicationsDataSafety");
      System.err.println("Status code: " + e.getCode());
      System.err.println("Reason: " + e.getResponseBody());
      System.err.println("Response headers: " + e.getResponseHeaders());
      e.printStackTrace();
    }
  }
}

```

## Documentation for API Endpoints

All URIs are relative to *https://androidpublisher.googleapis.com*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*ApplicationsApi* | [**androidpublisherApplicationsDataSafety**](docs/ApplicationsApi.md#androidpublisherApplicationsDataSafety) | **POST** /androidpublisher/v3/applications/{packageName}/dataSafety | 
*ApplicationsApi* | [**androidpublisherApplicationsDeviceTierConfigsCreate**](docs/ApplicationsApi.md#androidpublisherApplicationsDeviceTierConfigsCreate) | **POST** /androidpublisher/v3/applications/{packageName}/deviceTierConfigs | 
*ApplicationsApi* | [**androidpublisherApplicationsDeviceTierConfigsGet**](docs/ApplicationsApi.md#androidpublisherApplicationsDeviceTierConfigsGet) | **GET** /androidpublisher/v3/applications/{packageName}/deviceTierConfigs/{deviceTierConfigId} | 
*ApplicationsApi* | [**androidpublisherApplicationsDeviceTierConfigsList**](docs/ApplicationsApi.md#androidpublisherApplicationsDeviceTierConfigsList) | **GET** /androidpublisher/v3/applications/{packageName}/deviceTierConfigs | 
*ApprecoveryApi* | [**androidpublisherApprecoveryAddTargeting**](docs/ApprecoveryApi.md#androidpublisherApprecoveryAddTargeting) | **POST** /androidpublisher/v3/applications/{packageName}/appRecoveries/{appRecoveryId}:addTargeting | 
*ApprecoveryApi* | [**androidpublisherApprecoveryCancel**](docs/ApprecoveryApi.md#androidpublisherApprecoveryCancel) | **POST** /androidpublisher/v3/applications/{packageName}/appRecoveries/{appRecoveryId}:cancel | 
*ApprecoveryApi* | [**androidpublisherApprecoveryCreate**](docs/ApprecoveryApi.md#androidpublisherApprecoveryCreate) | **POST** /androidpublisher/v3/applications/{packageName}/appRecoveries | 
*ApprecoveryApi* | [**androidpublisherApprecoveryDeploy**](docs/ApprecoveryApi.md#androidpublisherApprecoveryDeploy) | **POST** /androidpublisher/v3/applications/{packageName}/appRecoveries/{appRecoveryId}:deploy | 
*EditsApi* | [**androidpublisherEditsApksAddexternallyhosted**](docs/EditsApi.md#androidpublisherEditsApksAddexternallyhosted) | **POST** /androidpublisher/v3/applications/{packageName}/edits/{editId}/apks/externallyHosted | 
*EditsApi* | [**androidpublisherEditsApksList**](docs/EditsApi.md#androidpublisherEditsApksList) | **GET** /androidpublisher/v3/applications/{packageName}/edits/{editId}/apks | 
*EditsApi* | [**androidpublisherEditsApksUpload**](docs/EditsApi.md#androidpublisherEditsApksUpload) | **POST** /androidpublisher/v3/applications/{packageName}/edits/{editId}/apks | 
*EditsApi* | [**androidpublisherEditsBundlesList**](docs/EditsApi.md#androidpublisherEditsBundlesList) | **GET** /androidpublisher/v3/applications/{packageName}/edits/{editId}/bundles | 
*EditsApi* | [**androidpublisherEditsBundlesUpload**](docs/EditsApi.md#androidpublisherEditsBundlesUpload) | **POST** /androidpublisher/v3/applications/{packageName}/edits/{editId}/bundles | 
*EditsApi* | [**androidpublisherEditsCommit**](docs/EditsApi.md#androidpublisherEditsCommit) | **POST** /androidpublisher/v3/applications/{packageName}/edits/{editId}:commit | 
*EditsApi* | [**androidpublisherEditsCountryavailabilityGet**](docs/EditsApi.md#androidpublisherEditsCountryavailabilityGet) | **GET** /androidpublisher/v3/applications/{packageName}/edits/{editId}/countryAvailability/{track} | 
*EditsApi* | [**androidpublisherEditsDelete**](docs/EditsApi.md#androidpublisherEditsDelete) | **DELETE** /androidpublisher/v3/applications/{packageName}/edits/{editId} | 
*EditsApi* | [**androidpublisherEditsDeobfuscationfilesUpload**](docs/EditsApi.md#androidpublisherEditsDeobfuscationfilesUpload) | **POST** /androidpublisher/v3/applications/{packageName}/edits/{editId}/apks/{apkVersionCode}/deobfuscationFiles/{deobfuscationFileType} | 
*EditsApi* | [**androidpublisherEditsDetailsGet**](docs/EditsApi.md#androidpublisherEditsDetailsGet) | **GET** /androidpublisher/v3/applications/{packageName}/edits/{editId}/details | 
*EditsApi* | [**androidpublisherEditsDetailsPatch**](docs/EditsApi.md#androidpublisherEditsDetailsPatch) | **PATCH** /androidpublisher/v3/applications/{packageName}/edits/{editId}/details | 
*EditsApi* | [**androidpublisherEditsDetailsUpdate**](docs/EditsApi.md#androidpublisherEditsDetailsUpdate) | **PUT** /androidpublisher/v3/applications/{packageName}/edits/{editId}/details | 
*EditsApi* | [**androidpublisherEditsExpansionfilesGet**](docs/EditsApi.md#androidpublisherEditsExpansionfilesGet) | **GET** /androidpublisher/v3/applications/{packageName}/edits/{editId}/apks/{apkVersionCode}/expansionFiles/{expansionFileType} | 
*EditsApi* | [**androidpublisherEditsExpansionfilesPatch**](docs/EditsApi.md#androidpublisherEditsExpansionfilesPatch) | **PATCH** /androidpublisher/v3/applications/{packageName}/edits/{editId}/apks/{apkVersionCode}/expansionFiles/{expansionFileType} | 
*EditsApi* | [**androidpublisherEditsExpansionfilesUpdate**](docs/EditsApi.md#androidpublisherEditsExpansionfilesUpdate) | **PUT** /androidpublisher/v3/applications/{packageName}/edits/{editId}/apks/{apkVersionCode}/expansionFiles/{expansionFileType} | 
*EditsApi* | [**androidpublisherEditsExpansionfilesUpload**](docs/EditsApi.md#androidpublisherEditsExpansionfilesUpload) | **POST** /androidpublisher/v3/applications/{packageName}/edits/{editId}/apks/{apkVersionCode}/expansionFiles/{expansionFileType} | 
*EditsApi* | [**androidpublisherEditsGet**](docs/EditsApi.md#androidpublisherEditsGet) | **GET** /androidpublisher/v3/applications/{packageName}/edits/{editId} | 
*EditsApi* | [**androidpublisherEditsImagesDelete**](docs/EditsApi.md#androidpublisherEditsImagesDelete) | **DELETE** /androidpublisher/v3/applications/{packageName}/edits/{editId}/listings/{language}/{imageType}/{imageId} | 
*EditsApi* | [**androidpublisherEditsImagesDeleteall**](docs/EditsApi.md#androidpublisherEditsImagesDeleteall) | **DELETE** /androidpublisher/v3/applications/{packageName}/edits/{editId}/listings/{language}/{imageType} | 
*EditsApi* | [**androidpublisherEditsImagesList**](docs/EditsApi.md#androidpublisherEditsImagesList) | **GET** /androidpublisher/v3/applications/{packageName}/edits/{editId}/listings/{language}/{imageType} | 
*EditsApi* | [**androidpublisherEditsImagesUpload**](docs/EditsApi.md#androidpublisherEditsImagesUpload) | **POST** /androidpublisher/v3/applications/{packageName}/edits/{editId}/listings/{language}/{imageType} | 
*EditsApi* | [**androidpublisherEditsInsert**](docs/EditsApi.md#androidpublisherEditsInsert) | **POST** /androidpublisher/v3/applications/{packageName}/edits | 
*EditsApi* | [**androidpublisherEditsListingsDelete**](docs/EditsApi.md#androidpublisherEditsListingsDelete) | **DELETE** /androidpublisher/v3/applications/{packageName}/edits/{editId}/listings/{language} | 
*EditsApi* | [**androidpublisherEditsListingsDeleteall**](docs/EditsApi.md#androidpublisherEditsListingsDeleteall) | **DELETE** /androidpublisher/v3/applications/{packageName}/edits/{editId}/listings | 
*EditsApi* | [**androidpublisherEditsListingsGet**](docs/EditsApi.md#androidpublisherEditsListingsGet) | **GET** /androidpublisher/v3/applications/{packageName}/edits/{editId}/listings/{language} | 
*EditsApi* | [**androidpublisherEditsListingsList**](docs/EditsApi.md#androidpublisherEditsListingsList) | **GET** /androidpublisher/v3/applications/{packageName}/edits/{editId}/listings | 
*EditsApi* | [**androidpublisherEditsListingsPatch**](docs/EditsApi.md#androidpublisherEditsListingsPatch) | **PATCH** /androidpublisher/v3/applications/{packageName}/edits/{editId}/listings/{language} | 
*EditsApi* | [**androidpublisherEditsListingsUpdate**](docs/EditsApi.md#androidpublisherEditsListingsUpdate) | **PUT** /androidpublisher/v3/applications/{packageName}/edits/{editId}/listings/{language} | 
*EditsApi* | [**androidpublisherEditsTestersGet**](docs/EditsApi.md#androidpublisherEditsTestersGet) | **GET** /androidpublisher/v3/applications/{packageName}/edits/{editId}/testers/{track} | 
*EditsApi* | [**androidpublisherEditsTestersPatch**](docs/EditsApi.md#androidpublisherEditsTestersPatch) | **PATCH** /androidpublisher/v3/applications/{packageName}/edits/{editId}/testers/{track} | 
*EditsApi* | [**androidpublisherEditsTestersUpdate**](docs/EditsApi.md#androidpublisherEditsTestersUpdate) | **PUT** /androidpublisher/v3/applications/{packageName}/edits/{editId}/testers/{track} | 
*EditsApi* | [**androidpublisherEditsTracksCreate**](docs/EditsApi.md#androidpublisherEditsTracksCreate) | **POST** /androidpublisher/v3/applications/{packageName}/edits/{editId}/tracks | 
*EditsApi* | [**androidpublisherEditsTracksGet**](docs/EditsApi.md#androidpublisherEditsTracksGet) | **GET** /androidpublisher/v3/applications/{packageName}/edits/{editId}/tracks/{track} | 
*EditsApi* | [**androidpublisherEditsTracksList**](docs/EditsApi.md#androidpublisherEditsTracksList) | **GET** /androidpublisher/v3/applications/{packageName}/edits/{editId}/tracks | 
*EditsApi* | [**androidpublisherEditsTracksPatch**](docs/EditsApi.md#androidpublisherEditsTracksPatch) | **PATCH** /androidpublisher/v3/applications/{packageName}/edits/{editId}/tracks/{track} | 
*EditsApi* | [**androidpublisherEditsTracksUpdate**](docs/EditsApi.md#androidpublisherEditsTracksUpdate) | **PUT** /androidpublisher/v3/applications/{packageName}/edits/{editId}/tracks/{track} | 
*EditsApi* | [**androidpublisherEditsValidate**](docs/EditsApi.md#androidpublisherEditsValidate) | **POST** /androidpublisher/v3/applications/{packageName}/edits/{editId}:validate | 
*ExternaltransactionsApi* | [**androidpublisherExternaltransactionsCreateexternaltransaction**](docs/ExternaltransactionsApi.md#androidpublisherExternaltransactionsCreateexternaltransaction) | **POST** /androidpublisher/v3/{parent}/externalTransactions | 
*ExternaltransactionsApi* | [**androidpublisherExternaltransactionsGetexternaltransaction**](docs/ExternaltransactionsApi.md#androidpublisherExternaltransactionsGetexternaltransaction) | **GET** /androidpublisher/v3/{name} | 
*ExternaltransactionsApi* | [**androidpublisherExternaltransactionsRefundexternaltransaction**](docs/ExternaltransactionsApi.md#androidpublisherExternaltransactionsRefundexternaltransaction) | **POST** /androidpublisher/v3/{name}:refund | 
*GeneratedapksApi* | [**androidpublisherGeneratedapksDownload**](docs/GeneratedapksApi.md#androidpublisherGeneratedapksDownload) | **GET** /androidpublisher/v3/applications/{packageName}/generatedApks/{versionCode}/downloads/{downloadId}:download | 
*GeneratedapksApi* | [**androidpublisherGeneratedapksList**](docs/GeneratedapksApi.md#androidpublisherGeneratedapksList) | **GET** /androidpublisher/v3/applications/{packageName}/generatedApks/{versionCode} | 
*GrantsApi* | [**androidpublisherGrantsCreate**](docs/GrantsApi.md#androidpublisherGrantsCreate) | **POST** /androidpublisher/v3/{parent}/grants | 
*InappproductsApi* | [**androidpublisherInappproductsBatchDelete**](docs/InappproductsApi.md#androidpublisherInappproductsBatchDelete) | **POST** /androidpublisher/v3/applications/{packageName}/inappproducts:batchDelete | 
*InappproductsApi* | [**androidpublisherInappproductsBatchGet**](docs/InappproductsApi.md#androidpublisherInappproductsBatchGet) | **GET** /androidpublisher/v3/applications/{packageName}/inappproducts:batchGet | 
*InappproductsApi* | [**androidpublisherInappproductsBatchUpdate**](docs/InappproductsApi.md#androidpublisherInappproductsBatchUpdate) | **POST** /androidpublisher/v3/applications/{packageName}/inappproducts:batchUpdate | 
*InappproductsApi* | [**androidpublisherInappproductsDelete**](docs/InappproductsApi.md#androidpublisherInappproductsDelete) | **DELETE** /androidpublisher/v3/applications/{packageName}/inappproducts/{sku} | 
*InappproductsApi* | [**androidpublisherInappproductsGet**](docs/InappproductsApi.md#androidpublisherInappproductsGet) | **GET** /androidpublisher/v3/applications/{packageName}/inappproducts/{sku} | 
*InappproductsApi* | [**androidpublisherInappproductsInsert**](docs/InappproductsApi.md#androidpublisherInappproductsInsert) | **POST** /androidpublisher/v3/applications/{packageName}/inappproducts | 
*InappproductsApi* | [**androidpublisherInappproductsList**](docs/InappproductsApi.md#androidpublisherInappproductsList) | **GET** /androidpublisher/v3/applications/{packageName}/inappproducts | 
*InappproductsApi* | [**androidpublisherInappproductsPatch**](docs/InappproductsApi.md#androidpublisherInappproductsPatch) | **PATCH** /androidpublisher/v3/applications/{packageName}/inappproducts/{sku} | 
*InappproductsApi* | [**androidpublisherInappproductsUpdate**](docs/InappproductsApi.md#androidpublisherInappproductsUpdate) | **PUT** /androidpublisher/v3/applications/{packageName}/inappproducts/{sku} | 
*InternalappsharingartifactsApi* | [**androidpublisherInternalappsharingartifactsUploadapk**](docs/InternalappsharingartifactsApi.md#androidpublisherInternalappsharingartifactsUploadapk) | **POST** /androidpublisher/v3/applications/internalappsharing/{packageName}/artifacts/apk | 
*InternalappsharingartifactsApi* | [**androidpublisherInternalappsharingartifactsUploadbundle**](docs/InternalappsharingartifactsApi.md#androidpublisherInternalappsharingartifactsUploadbundle) | **POST** /androidpublisher/v3/applications/internalappsharing/{packageName}/artifacts/bundle | 
*MonetizationApi* | [**androidpublisherMonetizationConvertRegionPrices**](docs/MonetizationApi.md#androidpublisherMonetizationConvertRegionPrices) | **POST** /androidpublisher/v3/applications/{packageName}/pricing:convertRegionPrices | 
*MonetizationApi* | [**androidpublisherMonetizationSubscriptionsArchive**](docs/MonetizationApi.md#androidpublisherMonetizationSubscriptionsArchive) | **POST** /androidpublisher/v3/applications/{packageName}/subscriptions/{productId}:archive | 
*MonetizationApi* | [**androidpublisherMonetizationSubscriptionsBasePlansActivate**](docs/MonetizationApi.md#androidpublisherMonetizationSubscriptionsBasePlansActivate) | **POST** /androidpublisher/v3/applications/{packageName}/subscriptions/{productId}/basePlans/{basePlanId}:activate | 
*MonetizationApi* | [**androidpublisherMonetizationSubscriptionsBasePlansBatchMigratePrices**](docs/MonetizationApi.md#androidpublisherMonetizationSubscriptionsBasePlansBatchMigratePrices) | **POST** /androidpublisher/v3/applications/{packageName}/subscriptions/{productId}/basePlans:batchMigratePrices | 
*MonetizationApi* | [**androidpublisherMonetizationSubscriptionsBasePlansBatchUpdateStates**](docs/MonetizationApi.md#androidpublisherMonetizationSubscriptionsBasePlansBatchUpdateStates) | **POST** /androidpublisher/v3/applications/{packageName}/subscriptions/{productId}/basePlans:batchUpdateStates | 
*MonetizationApi* | [**androidpublisherMonetizationSubscriptionsBasePlansDeactivate**](docs/MonetizationApi.md#androidpublisherMonetizationSubscriptionsBasePlansDeactivate) | **POST** /androidpublisher/v3/applications/{packageName}/subscriptions/{productId}/basePlans/{basePlanId}:deactivate | 
*MonetizationApi* | [**androidpublisherMonetizationSubscriptionsBasePlansDelete**](docs/MonetizationApi.md#androidpublisherMonetizationSubscriptionsBasePlansDelete) | **DELETE** /androidpublisher/v3/applications/{packageName}/subscriptions/{productId}/basePlans/{basePlanId} | 
*MonetizationApi* | [**androidpublisherMonetizationSubscriptionsBasePlansMigratePrices**](docs/MonetizationApi.md#androidpublisherMonetizationSubscriptionsBasePlansMigratePrices) | **POST** /androidpublisher/v3/applications/{packageName}/subscriptions/{productId}/basePlans/{basePlanId}:migratePrices | 
*MonetizationApi* | [**androidpublisherMonetizationSubscriptionsBasePlansOffersActivate**](docs/MonetizationApi.md#androidpublisherMonetizationSubscriptionsBasePlansOffersActivate) | **POST** /androidpublisher/v3/applications/{packageName}/subscriptions/{productId}/basePlans/{basePlanId}/offers/{offerId}:activate | 
*MonetizationApi* | [**androidpublisherMonetizationSubscriptionsBasePlansOffersBatchGet**](docs/MonetizationApi.md#androidpublisherMonetizationSubscriptionsBasePlansOffersBatchGet) | **POST** /androidpublisher/v3/applications/{packageName}/subscriptions/{productId}/basePlans/{basePlanId}/offers:batchGet | 
*MonetizationApi* | [**androidpublisherMonetizationSubscriptionsBasePlansOffersBatchUpdate**](docs/MonetizationApi.md#androidpublisherMonetizationSubscriptionsBasePlansOffersBatchUpdate) | **POST** /androidpublisher/v3/applications/{packageName}/subscriptions/{productId}/basePlans/{basePlanId}/offers:batchUpdate | 
*MonetizationApi* | [**androidpublisherMonetizationSubscriptionsBasePlansOffersBatchUpdateStates**](docs/MonetizationApi.md#androidpublisherMonetizationSubscriptionsBasePlansOffersBatchUpdateStates) | **POST** /androidpublisher/v3/applications/{packageName}/subscriptions/{productId}/basePlans/{basePlanId}/offers:batchUpdateStates | 
*MonetizationApi* | [**androidpublisherMonetizationSubscriptionsBasePlansOffersCreate**](docs/MonetizationApi.md#androidpublisherMonetizationSubscriptionsBasePlansOffersCreate) | **POST** /androidpublisher/v3/applications/{packageName}/subscriptions/{productId}/basePlans/{basePlanId}/offers | 
*MonetizationApi* | [**androidpublisherMonetizationSubscriptionsBasePlansOffersDeactivate**](docs/MonetizationApi.md#androidpublisherMonetizationSubscriptionsBasePlansOffersDeactivate) | **POST** /androidpublisher/v3/applications/{packageName}/subscriptions/{productId}/basePlans/{basePlanId}/offers/{offerId}:deactivate | 
*MonetizationApi* | [**androidpublisherMonetizationSubscriptionsBasePlansOffersDelete**](docs/MonetizationApi.md#androidpublisherMonetizationSubscriptionsBasePlansOffersDelete) | **DELETE** /androidpublisher/v3/applications/{packageName}/subscriptions/{productId}/basePlans/{basePlanId}/offers/{offerId} | 
*MonetizationApi* | [**androidpublisherMonetizationSubscriptionsBasePlansOffersGet**](docs/MonetizationApi.md#androidpublisherMonetizationSubscriptionsBasePlansOffersGet) | **GET** /androidpublisher/v3/applications/{packageName}/subscriptions/{productId}/basePlans/{basePlanId}/offers/{offerId} | 
*MonetizationApi* | [**androidpublisherMonetizationSubscriptionsBasePlansOffersList**](docs/MonetizationApi.md#androidpublisherMonetizationSubscriptionsBasePlansOffersList) | **GET** /androidpublisher/v3/applications/{packageName}/subscriptions/{productId}/basePlans/{basePlanId}/offers | 
*MonetizationApi* | [**androidpublisherMonetizationSubscriptionsBasePlansOffersPatch**](docs/MonetizationApi.md#androidpublisherMonetizationSubscriptionsBasePlansOffersPatch) | **PATCH** /androidpublisher/v3/applications/{packageName}/subscriptions/{productId}/basePlans/{basePlanId}/offers/{offerId} | 
*MonetizationApi* | [**androidpublisherMonetizationSubscriptionsBatchGet**](docs/MonetizationApi.md#androidpublisherMonetizationSubscriptionsBatchGet) | **GET** /androidpublisher/v3/applications/{packageName}/subscriptions:batchGet | 
*MonetizationApi* | [**androidpublisherMonetizationSubscriptionsBatchUpdate**](docs/MonetizationApi.md#androidpublisherMonetizationSubscriptionsBatchUpdate) | **POST** /androidpublisher/v3/applications/{packageName}/subscriptions:batchUpdate | 
*MonetizationApi* | [**androidpublisherMonetizationSubscriptionsCreate**](docs/MonetizationApi.md#androidpublisherMonetizationSubscriptionsCreate) | **POST** /androidpublisher/v3/applications/{packageName}/subscriptions | 
*MonetizationApi* | [**androidpublisherMonetizationSubscriptionsDelete**](docs/MonetizationApi.md#androidpublisherMonetizationSubscriptionsDelete) | **DELETE** /androidpublisher/v3/applications/{packageName}/subscriptions/{productId} | 
*MonetizationApi* | [**androidpublisherMonetizationSubscriptionsGet**](docs/MonetizationApi.md#androidpublisherMonetizationSubscriptionsGet) | **GET** /androidpublisher/v3/applications/{packageName}/subscriptions/{productId} | 
*MonetizationApi* | [**androidpublisherMonetizationSubscriptionsList**](docs/MonetizationApi.md#androidpublisherMonetizationSubscriptionsList) | **GET** /androidpublisher/v3/applications/{packageName}/subscriptions | 
*MonetizationApi* | [**androidpublisherMonetizationSubscriptionsPatch**](docs/MonetizationApi.md#androidpublisherMonetizationSubscriptionsPatch) | **PATCH** /androidpublisher/v3/applications/{packageName}/subscriptions/{productId} | 
*OrdersApi* | [**androidpublisherOrdersRefund**](docs/OrdersApi.md#androidpublisherOrdersRefund) | **POST** /androidpublisher/v3/applications/{packageName}/orders/{orderId}:refund | 
*PurchasesApi* | [**androidpublisherPurchasesProductsAcknowledge**](docs/PurchasesApi.md#androidpublisherPurchasesProductsAcknowledge) | **POST** /androidpublisher/v3/applications/{packageName}/purchases/products/{productId}/tokens/{token}:acknowledge | 
*PurchasesApi* | [**androidpublisherPurchasesProductsConsume**](docs/PurchasesApi.md#androidpublisherPurchasesProductsConsume) | **POST** /androidpublisher/v3/applications/{packageName}/purchases/products/{productId}/tokens/{token}:consume | 
*PurchasesApi* | [**androidpublisherPurchasesProductsGet**](docs/PurchasesApi.md#androidpublisherPurchasesProductsGet) | **GET** /androidpublisher/v3/applications/{packageName}/purchases/products/{productId}/tokens/{token} | 
*PurchasesApi* | [**androidpublisherPurchasesSubscriptionsAcknowledge**](docs/PurchasesApi.md#androidpublisherPurchasesSubscriptionsAcknowledge) | **POST** /androidpublisher/v3/applications/{packageName}/purchases/subscriptions/{subscriptionId}/tokens/{token}:acknowledge | 
*PurchasesApi* | [**androidpublisherPurchasesSubscriptionsCancel**](docs/PurchasesApi.md#androidpublisherPurchasesSubscriptionsCancel) | **POST** /androidpublisher/v3/applications/{packageName}/purchases/subscriptions/{subscriptionId}/tokens/{token}:cancel | 
*PurchasesApi* | [**androidpublisherPurchasesSubscriptionsDefer**](docs/PurchasesApi.md#androidpublisherPurchasesSubscriptionsDefer) | **POST** /androidpublisher/v3/applications/{packageName}/purchases/subscriptions/{subscriptionId}/tokens/{token}:defer | 
*PurchasesApi* | [**androidpublisherPurchasesSubscriptionsGet**](docs/PurchasesApi.md#androidpublisherPurchasesSubscriptionsGet) | **GET** /androidpublisher/v3/applications/{packageName}/purchases/subscriptions/{subscriptionId}/tokens/{token} | 
*PurchasesApi* | [**androidpublisherPurchasesSubscriptionsRefund**](docs/PurchasesApi.md#androidpublisherPurchasesSubscriptionsRefund) | **POST** /androidpublisher/v3/applications/{packageName}/purchases/subscriptions/{subscriptionId}/tokens/{token}:refund | 
*PurchasesApi* | [**androidpublisherPurchasesSubscriptionsRevoke**](docs/PurchasesApi.md#androidpublisherPurchasesSubscriptionsRevoke) | **POST** /androidpublisher/v3/applications/{packageName}/purchases/subscriptions/{subscriptionId}/tokens/{token}:revoke | 
*PurchasesApi* | [**androidpublisherPurchasesSubscriptionsv2Get**](docs/PurchasesApi.md#androidpublisherPurchasesSubscriptionsv2Get) | **GET** /androidpublisher/v3/applications/{packageName}/purchases/subscriptionsv2/tokens/{token} | 
*PurchasesApi* | [**androidpublisherPurchasesSubscriptionsv2Revoke**](docs/PurchasesApi.md#androidpublisherPurchasesSubscriptionsv2Revoke) | **POST** /androidpublisher/v3/applications/{packageName}/purchases/subscriptionsv2/tokens/{token}:revoke | 
*PurchasesApi* | [**androidpublisherPurchasesVoidedpurchasesList**](docs/PurchasesApi.md#androidpublisherPurchasesVoidedpurchasesList) | **GET** /androidpublisher/v3/applications/{packageName}/purchases/voidedpurchases | 
*ReviewsApi* | [**androidpublisherReviewsGet**](docs/ReviewsApi.md#androidpublisherReviewsGet) | **GET** /androidpublisher/v3/applications/{packageName}/reviews/{reviewId} | 
*ReviewsApi* | [**androidpublisherReviewsList**](docs/ReviewsApi.md#androidpublisherReviewsList) | **GET** /androidpublisher/v3/applications/{packageName}/reviews | 
*ReviewsApi* | [**androidpublisherReviewsReply**](docs/ReviewsApi.md#androidpublisherReviewsReply) | **POST** /androidpublisher/v3/applications/{packageName}/reviews/{reviewId}:reply | 
*SystemapksApi* | [**androidpublisherSystemapksVariantsCreate**](docs/SystemapksApi.md#androidpublisherSystemapksVariantsCreate) | **POST** /androidpublisher/v3/applications/{packageName}/systemApks/{versionCode}/variants | 
*SystemapksApi* | [**androidpublisherSystemapksVariantsDownload**](docs/SystemapksApi.md#androidpublisherSystemapksVariantsDownload) | **GET** /androidpublisher/v3/applications/{packageName}/systemApks/{versionCode}/variants/{variantId}:download | 
*SystemapksApi* | [**androidpublisherSystemapksVariantsGet**](docs/SystemapksApi.md#androidpublisherSystemapksVariantsGet) | **GET** /androidpublisher/v3/applications/{packageName}/systemApks/{versionCode}/variants/{variantId} | 
*SystemapksApi* | [**androidpublisherSystemapksVariantsList**](docs/SystemapksApi.md#androidpublisherSystemapksVariantsList) | **GET** /androidpublisher/v3/applications/{packageName}/systemApks/{versionCode}/variants | 
*UsersApi* | [**androidpublisherUsersCreate**](docs/UsersApi.md#androidpublisherUsersCreate) | **POST** /androidpublisher/v3/{parent}/users | 
*UsersApi* | [**androidpublisherUsersDelete**](docs/UsersApi.md#androidpublisherUsersDelete) | **DELETE** /androidpublisher/v3/{name} | 
*UsersApi* | [**androidpublisherUsersList**](docs/UsersApi.md#androidpublisherUsersList) | **GET** /androidpublisher/v3/{parent}/users | 
*UsersApi* | [**androidpublisherUsersPatch**](docs/UsersApi.md#androidpublisherUsersPatch) | **PATCH** /androidpublisher/v3/{name} | 


## Documentation for Models

 - [Abi](docs/Abi.md)
 - [AbiTargeting](docs/AbiTargeting.md)
 - [AcquisitionTargetingRule](docs/AcquisitionTargetingRule.md)
 - [ActivateBasePlanRequest](docs/ActivateBasePlanRequest.md)
 - [ActivateSubscriptionOfferRequest](docs/ActivateSubscriptionOfferRequest.md)
 - [AddTargetingRequest](docs/AddTargetingRequest.md)
 - [AllUsers](docs/AllUsers.md)
 - [AndroidSdks](docs/AndroidSdks.md)
 - [Apk](docs/Apk.md)
 - [ApkBinary](docs/ApkBinary.md)
 - [ApkDescription](docs/ApkDescription.md)
 - [ApkSet](docs/ApkSet.md)
 - [ApkTargeting](docs/ApkTargeting.md)
 - [ApksAddExternallyHostedRequest](docs/ApksAddExternallyHostedRequest.md)
 - [ApksAddExternallyHostedResponse](docs/ApksAddExternallyHostedResponse.md)
 - [ApksListResponse](docs/ApksListResponse.md)
 - [AppDetails](docs/AppDetails.md)
 - [AppEdit](docs/AppEdit.md)
 - [AppRecoveryAction](docs/AppRecoveryAction.md)
 - [AppVersionList](docs/AppVersionList.md)
 - [AppVersionRange](docs/AppVersionRange.md)
 - [AssetModuleMetadata](docs/AssetModuleMetadata.md)
 - [AssetSliceSet](docs/AssetSliceSet.md)
 - [AutoRenewingBasePlanType](docs/AutoRenewingBasePlanType.md)
 - [AutoRenewingPlan](docs/AutoRenewingPlan.md)
 - [BasePlan](docs/BasePlan.md)
 - [BatchGetSubscriptionOffersRequest](docs/BatchGetSubscriptionOffersRequest.md)
 - [BatchGetSubscriptionOffersResponse](docs/BatchGetSubscriptionOffersResponse.md)
 - [BatchGetSubscriptionsResponse](docs/BatchGetSubscriptionsResponse.md)
 - [BatchMigrateBasePlanPricesRequest](docs/BatchMigrateBasePlanPricesRequest.md)
 - [BatchMigrateBasePlanPricesResponse](docs/BatchMigrateBasePlanPricesResponse.md)
 - [BatchUpdateBasePlanStatesRequest](docs/BatchUpdateBasePlanStatesRequest.md)
 - [BatchUpdateBasePlanStatesResponse](docs/BatchUpdateBasePlanStatesResponse.md)
 - [BatchUpdateSubscriptionOfferStatesRequest](docs/BatchUpdateSubscriptionOfferStatesRequest.md)
 - [BatchUpdateSubscriptionOfferStatesResponse](docs/BatchUpdateSubscriptionOfferStatesResponse.md)
 - [BatchUpdateSubscriptionOffersRequest](docs/BatchUpdateSubscriptionOffersRequest.md)
 - [BatchUpdateSubscriptionOffersResponse](docs/BatchUpdateSubscriptionOffersResponse.md)
 - [BatchUpdateSubscriptionsRequest](docs/BatchUpdateSubscriptionsRequest.md)
 - [BatchUpdateSubscriptionsResponse](docs/BatchUpdateSubscriptionsResponse.md)
 - [Bundle](docs/Bundle.md)
 - [BundlesListResponse](docs/BundlesListResponse.md)
 - [CancelSurveyResult](docs/CancelSurveyResult.md)
 - [CanceledStateContext](docs/CanceledStateContext.md)
 - [Comment](docs/Comment.md)
 - [ConvertRegionPricesRequest](docs/ConvertRegionPricesRequest.md)
 - [ConvertRegionPricesResponse](docs/ConvertRegionPricesResponse.md)
 - [ConvertedOtherRegionsPrice](docs/ConvertedOtherRegionsPrice.md)
 - [ConvertedRegionPrice](docs/ConvertedRegionPrice.md)
 - [CountryTargeting](docs/CountryTargeting.md)
 - [CreateDraftAppRecoveryRequest](docs/CreateDraftAppRecoveryRequest.md)
 - [DeactivateBasePlanRequest](docs/DeactivateBasePlanRequest.md)
 - [DeactivateSubscriptionOfferRequest](docs/DeactivateSubscriptionOfferRequest.md)
 - [DeferredItemReplacement](docs/DeferredItemReplacement.md)
 - [DeobfuscationFile](docs/DeobfuscationFile.md)
 - [DeobfuscationFilesUploadResponse](docs/DeobfuscationFilesUploadResponse.md)
 - [DeveloperComment](docs/DeveloperComment.md)
 - [DeviceFeature](docs/DeviceFeature.md)
 - [DeviceFeatureTargeting](docs/DeviceFeatureTargeting.md)
 - [DeviceGroup](docs/DeviceGroup.md)
 - [DeviceId](docs/DeviceId.md)
 - [DeviceMetadata](docs/DeviceMetadata.md)
 - [DeviceRam](docs/DeviceRam.md)
 - [DeviceSelector](docs/DeviceSelector.md)
 - [DeviceSpec](docs/DeviceSpec.md)
 - [DeviceTier](docs/DeviceTier.md)
 - [DeviceTierConfig](docs/DeviceTierConfig.md)
 - [DeviceTierSet](docs/DeviceTierSet.md)
 - [ExpansionFile](docs/ExpansionFile.md)
 - [ExpansionFilesUploadResponse](docs/ExpansionFilesUploadResponse.md)
 - [ExternalAccountIdentifiers](docs/ExternalAccountIdentifiers.md)
 - [ExternalSubscription](docs/ExternalSubscription.md)
 - [ExternalTransaction](docs/ExternalTransaction.md)
 - [ExternalTransactionAddress](docs/ExternalTransactionAddress.md)
 - [ExternallyHostedApk](docs/ExternallyHostedApk.md)
 - [GeneratedApksListResponse](docs/GeneratedApksListResponse.md)
 - [GeneratedApksPerSigningKey](docs/GeneratedApksPerSigningKey.md)
 - [GeneratedAssetPackSlice](docs/GeneratedAssetPackSlice.md)
 - [GeneratedRecoveryApk](docs/GeneratedRecoveryApk.md)
 - [GeneratedSplitApk](docs/GeneratedSplitApk.md)
 - [GeneratedStandaloneApk](docs/GeneratedStandaloneApk.md)
 - [GeneratedUniversalApk](docs/GeneratedUniversalApk.md)
 - [GetSubscriptionOfferRequest](docs/GetSubscriptionOfferRequest.md)
 - [Grant](docs/Grant.md)
 - [Image](docs/Image.md)
 - [ImagesDeleteAllResponse](docs/ImagesDeleteAllResponse.md)
 - [ImagesListResponse](docs/ImagesListResponse.md)
 - [ImagesUploadResponse](docs/ImagesUploadResponse.md)
 - [InAppProduct](docs/InAppProduct.md)
 - [InAppProductListing](docs/InAppProductListing.md)
 - [InappproductsBatchDeleteRequest](docs/InappproductsBatchDeleteRequest.md)
 - [InappproductsBatchGetResponse](docs/InappproductsBatchGetResponse.md)
 - [InappproductsBatchUpdateRequest](docs/InappproductsBatchUpdateRequest.md)
 - [InappproductsBatchUpdateResponse](docs/InappproductsBatchUpdateResponse.md)
 - [InappproductsDeleteRequest](docs/InappproductsDeleteRequest.md)
 - [InappproductsListResponse](docs/InappproductsListResponse.md)
 - [InappproductsUpdateRequest](docs/InappproductsUpdateRequest.md)
 - [InternalAppSharingArtifact](docs/InternalAppSharingArtifact.md)
 - [IntroductoryPriceInfo](docs/IntroductoryPriceInfo.md)
 - [LanguageTargeting](docs/LanguageTargeting.md)
 - [ListAppRecoveriesResponse](docs/ListAppRecoveriesResponse.md)
 - [ListDeviceTierConfigsResponse](docs/ListDeviceTierConfigsResponse.md)
 - [ListSubscriptionOffersResponse](docs/ListSubscriptionOffersResponse.md)
 - [ListSubscriptionsResponse](docs/ListSubscriptionsResponse.md)
 - [ListUsersResponse](docs/ListUsersResponse.md)
 - [Listing](docs/Listing.md)
 - [ListingsListResponse](docs/ListingsListResponse.md)
 - [LocalizedText](docs/LocalizedText.md)
 - [ManagedProductTaxAndComplianceSettings](docs/ManagedProductTaxAndComplianceSettings.md)
 - [MigrateBasePlanPricesRequest](docs/MigrateBasePlanPricesRequest.md)
 - [ModuleMetadata](docs/ModuleMetadata.md)
 - [ModuleTargeting](docs/ModuleTargeting.md)
 - [Money](docs/Money.md)
 - [MultiAbi](docs/MultiAbi.md)
 - [MultiAbiTargeting](docs/MultiAbiTargeting.md)
 - [OfferDetails](docs/OfferDetails.md)
 - [OfferTag](docs/OfferTag.md)
 - [OneTimeExternalTransaction](docs/OneTimeExternalTransaction.md)
 - [OtherRegionsBasePlanConfig](docs/OtherRegionsBasePlanConfig.md)
 - [OtherRegionsSubscriptionOfferConfig](docs/OtherRegionsSubscriptionOfferConfig.md)
 - [OtherRegionsSubscriptionOfferPhaseConfig](docs/OtherRegionsSubscriptionOfferPhaseConfig.md)
 - [OtherRegionsSubscriptionOfferPhasePrices](docs/OtherRegionsSubscriptionOfferPhasePrices.md)
 - [PageInfo](docs/PageInfo.md)
 - [PartialRefund](docs/PartialRefund.md)
 - [PausedStateContext](docs/PausedStateContext.md)
 - [PrepaidBasePlanType](docs/PrepaidBasePlanType.md)
 - [PrepaidPlan](docs/PrepaidPlan.md)
 - [Price](docs/Price.md)
 - [ProductPurchase](docs/ProductPurchase.md)
 - [ProductPurchasesAcknowledgeRequest](docs/ProductPurchasesAcknowledgeRequest.md)
 - [RecurringExternalTransaction](docs/RecurringExternalTransaction.md)
 - [RefundExternalTransactionRequest](docs/RefundExternalTransactionRequest.md)
 - [RegionalBasePlanConfig](docs/RegionalBasePlanConfig.md)
 - [RegionalPriceMigrationConfig](docs/RegionalPriceMigrationConfig.md)
 - [RegionalSubscriptionOfferConfig](docs/RegionalSubscriptionOfferConfig.md)
 - [RegionalSubscriptionOfferPhaseConfig](docs/RegionalSubscriptionOfferPhaseConfig.md)
 - [RegionalTaxRateInfo](docs/RegionalTaxRateInfo.md)
 - [Regions](docs/Regions.md)
 - [RegionsVersion](docs/RegionsVersion.md)
 - [RemoteInAppUpdate](docs/RemoteInAppUpdate.md)
 - [RemoteInAppUpdateData](docs/RemoteInAppUpdateData.md)
 - [RemoteInAppUpdateDataPerBundle](docs/RemoteInAppUpdateDataPerBundle.md)
 - [Review](docs/Review.md)
 - [ReviewReplyResult](docs/ReviewReplyResult.md)
 - [ReviewsListResponse](docs/ReviewsListResponse.md)
 - [ReviewsReplyRequest](docs/ReviewsReplyRequest.md)
 - [ReviewsReplyResponse](docs/ReviewsReplyResponse.md)
 - [RevocationContext](docs/RevocationContext.md)
 - [RevokeSubscriptionPurchaseRequest](docs/RevokeSubscriptionPurchaseRequest.md)
 - [SafetyLabelsUpdateRequest](docs/SafetyLabelsUpdateRequest.md)
 - [ScreenDensity](docs/ScreenDensity.md)
 - [ScreenDensityTargeting](docs/ScreenDensityTargeting.md)
 - [SdkVersion](docs/SdkVersion.md)
 - [SdkVersionTargeting](docs/SdkVersionTargeting.md)
 - [SplitApkMetadata](docs/SplitApkMetadata.md)
 - [SplitApkVariant](docs/SplitApkVariant.md)
 - [StandaloneApkMetadata](docs/StandaloneApkMetadata.md)
 - [SubscribeWithGoogleInfo](docs/SubscribeWithGoogleInfo.md)
 - [Subscription](docs/Subscription.md)
 - [SubscriptionCancelSurveyResult](docs/SubscriptionCancelSurveyResult.md)
 - [SubscriptionDeferralInfo](docs/SubscriptionDeferralInfo.md)
 - [SubscriptionItemPriceChangeDetails](docs/SubscriptionItemPriceChangeDetails.md)
 - [SubscriptionListing](docs/SubscriptionListing.md)
 - [SubscriptionOffer](docs/SubscriptionOffer.md)
 - [SubscriptionOfferPhase](docs/SubscriptionOfferPhase.md)
 - [SubscriptionOfferTargeting](docs/SubscriptionOfferTargeting.md)
 - [SubscriptionPriceChange](docs/SubscriptionPriceChange.md)
 - [SubscriptionPurchase](docs/SubscriptionPurchase.md)
 - [SubscriptionPurchaseLineItem](docs/SubscriptionPurchaseLineItem.md)
 - [SubscriptionPurchaseV2](docs/SubscriptionPurchaseV2.md)
 - [SubscriptionPurchasesAcknowledgeRequest](docs/SubscriptionPurchasesAcknowledgeRequest.md)
 - [SubscriptionPurchasesDeferRequest](docs/SubscriptionPurchasesDeferRequest.md)
 - [SubscriptionPurchasesDeferResponse](docs/SubscriptionPurchasesDeferResponse.md)
 - [SubscriptionTaxAndComplianceSettings](docs/SubscriptionTaxAndComplianceSettings.md)
 - [SystemApkOptions](docs/SystemApkOptions.md)
 - [SystemApksListResponse](docs/SystemApksListResponse.md)
 - [SystemFeature](docs/SystemFeature.md)
 - [Targeting](docs/Targeting.md)
 - [TargetingInfo](docs/TargetingInfo.md)
 - [TargetingRuleScope](docs/TargetingRuleScope.md)
 - [TargetingUpdate](docs/TargetingUpdate.md)
 - [Testers](docs/Testers.md)
 - [TextureCompressionFormat](docs/TextureCompressionFormat.md)
 - [TextureCompressionFormatTargeting](docs/TextureCompressionFormatTargeting.md)
 - [Timestamp](docs/Timestamp.md)
 - [TokenPagination](docs/TokenPagination.md)
 - [Track](docs/Track.md)
 - [TrackConfig](docs/TrackConfig.md)
 - [TrackCountryAvailability](docs/TrackCountryAvailability.md)
 - [TrackRelease](docs/TrackRelease.md)
 - [TrackTargetedCountry](docs/TrackTargetedCountry.md)
 - [TracksListResponse](docs/TracksListResponse.md)
 - [UpdateBasePlanStateRequest](docs/UpdateBasePlanStateRequest.md)
 - [UpdateSubscriptionOfferRequest](docs/UpdateSubscriptionOfferRequest.md)
 - [UpdateSubscriptionOfferStateRequest](docs/UpdateSubscriptionOfferStateRequest.md)
 - [UpdateSubscriptionRequest](docs/UpdateSubscriptionRequest.md)
 - [UpgradeTargetingRule](docs/UpgradeTargetingRule.md)
 - [User](docs/User.md)
 - [UserComment](docs/UserComment.md)
 - [UserCountriesTargeting](docs/UserCountriesTargeting.md)
 - [UserCountrySet](docs/UserCountrySet.md)
 - [UserInitiatedCancellation](docs/UserInitiatedCancellation.md)
 - [UsesPermission](docs/UsesPermission.md)
 - [Variant](docs/Variant.md)
 - [VariantTargeting](docs/VariantTargeting.md)
 - [VoidedPurchase](docs/VoidedPurchase.md)
 - [VoidedPurchasesListResponse](docs/VoidedPurchasesListResponse.md)


<a id="documentation-for-authorization"></a>
## Documentation for Authorization


Authentication schemes defined for the API:
<a id="Oauth2"></a>
### Oauth2

- **Type**: OAuth
- **Flow**: implicit
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
  - https://www.googleapis.com/auth/androidpublisher: View and manage your Google Play Developer account

<a id="Oauth2c"></a>
### Oauth2c

- **Type**: OAuth
- **Flow**: accessCode
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
  - https://www.googleapis.com/auth/androidpublisher: View and manage your Google Play Developer account


## Recommendation

It's recommended to create an instance of `ApiClient` per thread in a multithreaded environment to avoid any potential issues.

## Author



